--- a/css/main.css
+++ b/css/main.css
@@ -172,7 +172,7 @@ body{
     flex-wrap: wrap;
 }
 .input-3{             
-    padding: 20px 40px;
+    padding: 10px 50px;
 }
 .input-1 input, .input-2 input{
     padding-bottom: 45px;
@@ -194,4 +194,88 @@ button{
     padding: 20px 40px;
     font-weight: 700;
     font-size: 20px;
+}
+
+/*RESPONSIVE*/
+@media only screen and (max-width :930px){
+    .input-3{             
+        padding: 10px 5px;
+    }
+    .input-3 input{
+        padding-bottom: 145px;
+        padding-right: 650px;
+    }
+}
+@media only screen and (max-width :890px){
+    .input-3{             
+        padding: 10px 40px;
+    }
+    .input-3 input{
+        padding-bottom: 145px;
+        padding-right: 640px;
+    }
+}
+@media only screen and (max-width :880px){
+    .input-3{             
+        padding: 10px 20px;
+    }
+    .input-3 input{
+        padding-bottom: 145px;
+        padding-right: 610px;
+    }
+}
+@media only screen and (max-width :820px){
+    .header h1, .header h2{
+        position: absolute;
+    }
+    .header h1{
+        text-align: center;
+        width: 100%;
+        top: 70px;
+    }
+    .header h2{
+        bottom: 150px;
+        padding: 30px 20px;
+        left: 150px;
+        background-color: rgba(114, 153, 254, 0.5);
+        border-radius: 10px;
+    }
+    .input-3{    
+        justify-content: center;
+        display: flex;
+        justify-content: space-around;
+        margin-bottom: 15px;
+        padding: 10px;
+        flex-wrap: wrap;
+    }
+    .input-3 input{
+        padding-bottom: 200px;
+        padding-right: 210px;
+    }
+}
+@media only screen and (max-width :780){
+    .header h1{
+        text-align: center;
+        width: 100%;
+        top: 70px;
+    }
+    .header h2{
+        bottom: 150px;
+        padding: 80px 20px;
+        left: 150px;
+        background-color: rgba(114, 153, 254, 0.5);
+        border-radius: 10px;
+    }
+    .input-3{    
+        justify-content: center;
+        display: flex;
+        justify-content: space-around;
+        margin-bottom: 15px;
+        padding: 10px;
+        flex-wrap: wrap;
+    }
+    .input-3 input{
+        padding-bottom: 200px;
+        padding-right: 210px;
+    }
 }
